# hardci

./: .gitignore  AGENTS.md  AI_AGENT_QUICKSTART.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  TROUBLESHOOTING.md  llms.txt  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pypi-publish.yml  ruleset-compat.yml  scorecards.yml  workflow.yml
docs/: release-strategy.md  repository-security.md  security-design.md
examples/adapters/: README.md  sim_ntc_adapter.py
examples/nucleo-f446re_demo/: README.md
examples/nucleo-f446re_demo/tests/: test_firmware.py
examples/pytest/: test_ntc_diagnosis.py
src/hardci/: __init__.py  __main__.py  adapters.py  artifacts.py  bridge.py  can.py  cli.py  comports.py  comstdio.py  config.py  debugger.py  gdbmi.py  mcp.py  pytest_plugin.py  report.py  stdio.py  tools.py  types.py
src/hardci/backends/: __init__.py  common.py  gdbdebug.py  openocd.py  pyocd.py  stlink.py
src/hardci/schemas/: config.schema.json
src/hardci/skills/hardci-config-setup/: SKILL.md
src/hardci/templates/: mcp.json
tests/: conftest.py  test_debug_sessions.py  test_hardci.py  test_hardening.py  test_pytest_plugin.py
tests/fixtures/: fake_gdb.py  fake_openocd.py  fake_pyocd.py  fake_stlink.py  fake_stlink_unconfirmed.py
